[tool.poetry]
name = "docs.fullctl.com"
version = "0.1.0"
description = ""
authors = ["20C <code@20c.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.2.2"

[tool.poetry.dev-dependencies]
pre-commit = ">=2.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
