[tool.poetry]
name = "docs.fullctl.com"
version = "0.1.0"
description = ""
authors = ["20C <code@20c.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.5"
mkdocs = "^1.2.2"

[tool.poetry.group.insiders]
optional = true

[tool.poetry.group.insiders.dependencies]
mkdocs-material = {git = "ssh://git@git.20c.com/gh/squidfunk/mkdocs-material-insiders.git"}

[tool.poetry.dev-dependencies]
pre-commit = ">=2.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
